# acc3d

./: CMakeLists.txt  README.md  copy_into_bin.bat
Material/RootSigDef/: default_no_cam.yml
Materials/RootSignatures/: diffuse_rootsig.yml
Shaders/: diffuse.psh  diffuse.vsh  pixel.psh  vertex.vsh
Source/: CMakeLists.txt  Main.cpp
Source/AssetCore/: CMakeLists.txt  MeshImporter.cpp  MeshImporter.h  MeshLibrary.cpp  MeshLibrary.h
Source/Core/: Application.cpp  Application.h  CMakeLists.txt  Input.cpp  Input.h  Log.cpp  Log.h  Window.cpp  Window.h
Source/ECS/: CMakeLists.txt  CameraComponent.h  CommonComponents.h  Entity.cpp  Entity.h  LightComponents.h  MeshComponent.h  MeshRendererComponent.h  Scene.cpp  Scene.h
Source/Graphics/: CMakeLists.txt  CommandAllocator.cpp  CommandAllocator.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  DescriptorHeap.cpp  DescriptorHeap.h  Device.cpp  Device.h  Direct3D12Utility.cpp  Direct3D12Utility.h  Drawable.cpp  Drawable.h  DrawableFactory.cpp  DrawableFactory.h  Fence.cpp  Fence.h  InfoQueue.cpp  InfoQueue.h  LightContext.cpp  LightContext.h  Material.cpp  Material.h  PipelineState.cpp  PipelineState.h  Renderer.cpp  Renderer.h  RendererConfiguration.h  RendererFactory.cpp  RendererFactory.h  Resource.cpp  Resource.h  ResultHandler.cpp  ResultHandler.h  RootSignature.cpp  RootSignature.h  RootSignatureLibrary.cpp  RootSignatureLibrary.h  (+11 more)
Source/Graphics/Material/: CMakeLists.txt  MaterialDeserializer.cpp  MaterialDeserializer.h  RootSignatureFileDeserializer.cpp  RootSignatureFileDeserializer.h  RootSignatureParser.cpp  RootSignatureParser.h  acc3d_yaml.h
Source/Graphics/Memory/: Alignment.h  CMakeLists.txt  DescriptorAllocation.cpp  DescriptorAllocation.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorAllocatorPage.cpp  DescriptorAllocatorPage.h  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h  ReserveStaticDescriptorHeapSlot.h
Source/Graphics/Wrappers/: CMakeLists.txt  CommandAllocator.h  CommandList.h  CommandQueue.cpp  CommandQueue.h  DescriptorHeap.h  Device.cpp  Device.h  Fence.cpp  Fence.h  InfoQueue.cpp  InfoQueue.h  PipelineState.cpp  PipelineState.h  Resource.cpp  Resource.h  RootSignature.cpp  RootSignature.h  SwapChain.cpp  SwapChain.h
Source/Util/: CMakeLists.txt  RandomGenerator.cpp  RandomGenerator.h  StringUtil.cpp  StringUtil.h
